[package]
name = "shm_open_anonymous"
version = "1.0.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2018"
description = "Anonymous POSIX shared memory objects"
repository = "https://github.com/calebzulawski/shm_open_anonymous"
license = "MIT OR Apache-2.0"
keywords = ["shm_open", "memfd_create", "shm_anon"]
categories = ["memory-management", "os", "no-std"]

[dependencies]
libc = { version = "0.2", default-features = false }
